--- a/style.css
+++ b/style.css
@@ -2,14 +2,17 @@
   display: flex;
   height: 100vh;
   gap: 10px;
+  justify-content: flex-start;
 
-  /* 
-  - main axis  = flex-direction의 '진행' 방향
-  - cross axis = flex-direction의 '교차' 방향
-  */  
-  flex-direction: row-reverse;  /* end <----- start */
-  justify-content: flex-start;  /* main axis에서의 item 정렬 */
-  align-items: flex-end;        /* cross axis에서의 item 정렬 */
+  /* flex-wrap: flex 컨테이너가 '단일라인(single) or 다중라인(multi)'인지 제어 */
+  flex-wrap: nowrap;  /* default value: 단일라인 = 줄바꿈 없음, 한줄 너비에 맞게 item 요소가 찌그러짐(width가 작아짐) */
+  flex-wrap: wrap;    /* 다중라인 = 줄바꿈 허용 */
+  flex-wrap: wrap-reverse;  /* 다중라인 & 진행방향 reverse */
+
+  /* flex-flow: 'flex-direction' & 'flex-wrap'의 short-cut */
+  flex-flow: row wrap;
+  /* flex-direction: row;
+  flex-wrap: wrap; */
 }
 
 .box {
