--- a/style.css
+++ b/style.css
@@ -1,26 +1,40 @@
-.father {
+body {
+  padding: 0;
+  margin: 0;
   display: grid;
-  grid-template-columns: [cucumber] 100px [potato] 200px [banana] 50px [brocoli];
-  grid-template-rows: 200px 100px;
-  gap: 10px 20px;
+  height: 100vh;
+  
+  grid-template-columns: repeat(4, 1fr);  /* fr: fraction(부분, 일부), '비율' */
+  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-areas:  /* grid-template-areas: text로 grid의 템플릿을 디자인 */
+    'a a a a'           /* tag명과 관련X -> 자식요소에서 'grid-area'로 요소별 설정 */
+    'b b b c'
+    'd d d d'
+  ;
+  
+  grid-template:    /* grid-template: -columns & -rows & -areas => short cut*/
+    'a a a a' 1fr   /* 1fr: row(행) 높이 */
+    'b b b c' 2fr
+    'd d d d' 1fr / repeat(4, 1fr)  /* column(열)의 너비 */
+  ;
 }
 
-.child {
+header {
   background-color: navy;
-  color: white;
-  font-size: 28px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  grid-area: a; /* 부모요소에서 정의한 grid-template-areas에 대한 각 요소별 설정 */
 }
 
-.child:first-child {
-  background-color: teal;
-  grid-row: 1 / -1;
-}
-
-.child:last-child {
+section {
   background-color: aqua;
-  grid-column: 2 / -1;
-  grid-column: potato / brocoli;
+  grid-area: b;
+}
+
+aside {
+  background-color: teal;
+  grid-area: c;
+}
+
+footer {
+  background-color: blue;
+  grid-area: d;
 }
