Align and Justify Items
- grid 각 cell 내부 item이 정렬되는 방식 제어

--- a/style.css
+++ b/style.css
@@ -2,18 +2,32 @@
   display: grid;
   gap: 10px;
   min-height: 50vh;
-  grid-template-columns: repeat(2, 1fr);  /* 상위 2개의 열에만 적용 */
-  grid-template-rows: repeat(2, 1fr);     /* 상위 2개의 행에만 적용 */
-  grid-auto-rows: 1fr;        /* grid-template에서 정의한 item 외(2 rows 외)에 적용되는 '행'크기(높이) */
-  grid-auto-columns: 0.5fr;   /* grid-template에서 정의한 item 외(2 columns 외)에 적용되는 '열'크기(너비) */
-  grid-auto-flow: column;     /* grid-auto-flow: item의 배치 방향(기존 & 추가된 item에 적용) | defalut = row */
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
+  /* options : start, end, center, stretch... */
+  align-items: stretch;  /* stretch 옵션은 item의 height(cross axis)에 대한 값이 없을 때 적용 */
+  justify-items: end;    /* 그리드 셀 안의 item의 가로방향(main axis)에 대한 제어 */
+  place-items: stretch end;  /* 'align-items' & 'justify-items'의 short cut */
 }
 
 .child {
+  width: 50px;
+  /* height: 50px; */
   background-color: navy;
   color: white;
   font-size: 28px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.child:nth-child(6) {
+  background-color: teal;
+  align-self: stretch;
+  justify-self: center;
+  place-self: stretch center; /* 'align-self' & 'justify-self'의 short cut */
+  grid-column: span 2;
 }
