--- a/style.css
+++ b/style.css
@@ -1,33 +1,27 @@
+/* cell 자체를 정렬하는 방법*/
+
 .father {
   display: grid;
   gap: 10px;
-  min-height: 50vh;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-auto-rows: 1fr;
-  grid-auto-columns: 1fr;
-  grid-auto-flow: column;
-  /* options : start, end, center, stretch... */
-  align-items: stretch;  /* stretch 옵션은 item의 height(cross axis)에 대한 값이 없을 때 적용 */
-  justify-items: end;    /* 그리드 셀 안의 item의 가로방향(main axis)에 대한 제어 */
-  place-items: stretch end;  /* 'align-items' & 'justify-items'의 short cut */
+  min-height: 100vh;
+  grid-template-columns: repeat(5, 100px);
+  grid-template-rows: repeat(2, 100px);
+  background-color: lightblue;
+
+  /* 
+  - grid-template에서 정의한 Grid-Container 바깥의 extra area가 남아있어야 적용됨
+    => grid-template을 repeat(5, ifr) 등으로 정의한 경우에는 extra area가 없기 때문에 아래 코드는 적용❌
+  */
+  align-content: center;
+  justify-content: center;
+  place-content: center center;  /* 'align-content' & 'justify-content'의 short-cut */
 }
 
 .child {
-  width: 50px;
-  /* height: 50px; */
   background-color: navy;
   color: white;
   font-size: 28px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.child:nth-child(6) {
-  background-color: teal;
-  align-self: stretch;
-  justify-self: center;
-  place-self: stretch center; /* 'align-self' & 'justify-self'의 short cut */
-  grid-column: span 2;
 }
