--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,24 +3,24 @@ body {
   margin: 0;
 }
 
-%alert {
+/* @mixin 변수명($varName) { CSS 코드 } */
+@mixin alert($bgColor, $borderColor) {
+  background-color: $bgColor;
   margin: 10px;
   padding: 10px 20px;
   border-radius: 10px;
-  border: 1px dashed black;
+  border: 1px dashed $borderColor;
 }
 
+/* @include 변수명(varValue) */
 .success {
-  @extend %alert;
-  background-color: rgb(0, 128, 0);
+  @include alert(rgb(0, 128, 0), whitesmoke);
 }
 
 .warning {
-  @extend %alert;
-  background-color: rgb(171, 238, 70)
+  @include alert(rgb(171, 238, 70), gray);
 }
 
 .error {
-  @extend %alert;
-  background-color: rgb(200, 240, 140);
+  @include alert(rgb(200, 240, 140), black);
 }
