--- a/styles/fashion.scss
+++ b/styles/fashion.scss
@@ -10,6 +10,7 @@ body {
   align-items: center;
   height: 100vh;
   background-color: rgba($color: $grey, $alpha: 0.6);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .phone {
