--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -44,6 +44,6 @@
 	};
 	box-sizing: border-box;
 	html, body {
-		font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	}
 }
