--- a/styles/architect.scss
+++ b/styles/architect.scss
@@ -1,10 +1,16 @@
 @import './reset.scss';
+@import './styles.scss';
 
 $border: 2px solid black;
 
-body {
+body {height: 100vh;}
+
+
+
+.container {
   display: grid;
   height: 100vh;
+	margin: 0 5vw;
   grid-template-columns: 75px 1fr 75px;
   grid-template-rows: 75px 1fr 75px;
   .bar {
