--- a/styles/concert.scss
+++ b/styles/concert.scss
@@ -1,4 +1,5 @@
 @import './reset.scss';
+@import './styles.scss';
 
 $bgColor: #dde1d3;
 $inbgColor: #dde2d2;
@@ -34,10 +35,10 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: end;
-        gap: 10px;
+        gap: 8px;
         span {
           font-size: 18px;
-          font-weight: 600;
+          font-weight: 500;
         }
       }
     }
