--- a/styles/error404.scss
+++ b/styles/error404.scss
@@ -1,4 +1,6 @@
 @import './reset.scss';
+@import './styles.scss';
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Oi&display=swap');
 
 /* keyframes */
 @keyframes h-slide {
@@ -51,7 +53,7 @@ body {
 
 .container {
   width: 80%;
-  // min-width: 1050px;
+  min-width: 1100px;
   height: 80%;
   border-radius: 10px;
   border: 7px solid black;
@@ -61,12 +63,13 @@ body {
   grid-template-columns: 50px 1fr 50px;
   grid-template-rows: 50px 1fr 50px;
 }
+
 .dot {
-	background-color: $green;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 18px;
+  background-color: $green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
 }
 
 .bar {
@@ -97,7 +100,7 @@ body {
   }
   &:nth-child(6) {
     span {
-			height: max-content;
+      height: max-content;
       animation: vr-slide 10s linear infinite;
     }
   }
@@ -109,6 +112,7 @@ body {
 }
 
 main {
+  font-family: 'Dela Gothic One', sans-serif;
   background-color: black;
   padding: 2px;
   display: grid;
@@ -118,6 +122,19 @@ main {
   overflow: hidden;
   & > div {
     background-color: $gray;
+    &:not(:first-child) {
+      padding: 15px;
+      font-weight: 600;
+      font-size: 18px;
+    }
+    h1 {
+      font-size: 18px;
+    }
+    span {
+      font-family: system-ui, sans-serif;
+      font-size: 14px;
+      font-weight: normal;
+    }
 
     /* grid design */
     &:nth-child(5),
@@ -174,14 +191,13 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 100px;
+    font-size: 118px;
+    font-family: 'Nabla', system-ui;
+    font-family: 'Oi', serif;
   }
   .nav {
-    font-weight: 600;
-    font-size: 22px;
     display: flex;
     align-items: center;
-    justify-content: center;
   }
   .img {
     display: flex;
@@ -194,4 +210,50 @@ main {
       object-fit: cover;
     }
   }
+}
+
+.sub-nav {
+  display: flex;
+  align-items: center;
+}
+
+.program {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .program_top {
+    display: flex;
+    justify-content: space-between;
+  }
+  h1 {
+    margin-bottom: 10px;
+  }
+}
+
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-weight: 600;
+  .subscribe_cta {
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 5px;
+  }
+}
+
+.sns {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+}
+
+.diagonal {
+  background: linear-gradient(
+    to top right,
+    $gray calc(50% - 1px),
+    black,
+    $gray calc(50% + 1px)
+  );
 }
