--- a/styles/fashion.scss
+++ b/styles/fashion.scss
@@ -1,4 +1,6 @@
 @import './reset.scss';
+@import './styles.scss';
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 $grey: #bcbfbf;
 $brown: #1f1414;
@@ -9,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: rgba($color: $grey, $alpha: 0.6);
+  background-color: rgba($color: $grey, $alpha: 0.4);
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -20,35 +22,34 @@ body {
   background-color: #c6caca;
   box-shadow: 5px 10px 10px 5px rgba($color: #000000, $alpha: 0.5);
 	overflow: hidden;
-	padding: 50px 0;
+	padding: 50px 0 40px;
 }
 
 .header {
   padding: 0px 15px 20px;
-	font-size: 20px;
+	font-size: 22px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   .header_title {
     text-transform: uppercase;
-    font-weight: bold;
+    letter-spacing: 1px;
   }
 }
 
 .total {
   background-color: $brown;
   padding: 30px 15px;
-  color: $grey;
+  color: #DEE2E2;
   display: flex;
   flex-direction: column;
   align-items: end;
-  font-weight: bold;
   gap: 10px;
   .total_price {
-    font-size: 30px;
+    font-size: 32px;
   }
   .total_subtitle {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
@@ -62,7 +63,7 @@ body {
 		border-top: $border;
 		position: relative;
     .item_info {
-      padding: 30px 15px;
+      padding: 20px 15px;
       display: grid;
 			grid-template-columns: repeat(2, 1fr);
       .item_info-col {
@@ -72,7 +73,7 @@ body {
         &:nth-child(2) {
           align-items: end;
           .item_total-price {
-            font-size: 34px;
+            font-size: 32px;
           }
           .item_piece-price {
             font-size: 18px;
@@ -80,9 +81,14 @@ body {
         }
         .item_title {
           font-size: 44px;
+          text-transform: uppercase;
+          font-family: "Anton", sans-serif;
+          letter-spacing: 3px;
         }
         .item_subtitle {
-          font-size: 18px;
+          font-size: 16px;
+          font-family: "Anton", sans-serif;
+          letter-spacing: 4px;
         }
       }
     }
@@ -90,14 +96,18 @@ body {
 			border-top: $border;
 			border-bottom: $border;
 			display: grid;
-			grid-template-columns: repeat(auto-fill, 115px);
+			grid-template-columns: repeat(auto-fill, 135px);
+      font-family: "Anton", sans-serif;
+      letter-spacing: 1px;
+      line-height: 1.3;
 			.spec {
-				padding: 25px;
+				padding: 15px;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
 				text-transform: uppercase;
-				font-size: 20px;
+				font-size: 18px;
+        letter-spacing: 4px;
 				&:last-child {
 					border-left: $border;
 				}
@@ -106,8 +116,8 @@ body {
   }
 	.item_photo {
 		position: absolute;
-		width: 50%;
-		height: 65%;
+		width: 40%;
+		height: 70%;
 		border: $border;
 		right: 15px;
 		bottom:  0px;
