--- a/styles/macOS.scss
+++ b/styles/macOS.scss
@@ -1,4 +1,5 @@
 @import './reset.scss';
+@import './styles.scss';
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 $bgColor: #e4e5e9;
@@ -10,8 +11,8 @@ $gray: #cbcfd2;
 $darkGray: #7f848a;
 
 body {
-  font-family: "Work Sans", sans-serif;
-	background-color: #afb4b8;
+  font-family: 'Work Sans', sans-serif;
+  background-color: #afb4b8;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -20,9 +21,8 @@ body {
   .wrapper {
     overflow: hidden;
     background-color: $black;
-    width: 80%;
-		min-width: 1300px;
-    height: 90%;
+    width: 70%;
+    height: 85%;
     border-radius: 7px;
     box-shadow: 5px 7px 17px rgba($color: #000000, $alpha: 0.5);
     .container {
@@ -36,6 +36,7 @@ body {
 }
 
 .info {
+  position: relative;
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: repeat(4, 1fr);
@@ -43,12 +44,65 @@ body {
   & > div {
     background-color: $bgColor;
   }
+  .hd_header {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    display: flex;
+    gap: 6px;
+    span {
+      height: 12px;
+      width: 12px;
+      border-radius: 50%;
+      &:first-child {
+        background-color: $black;
+      }
+      &:not(:first-child) {
+        border: 1px solid $black;
+      }
+    }
+  }
   .info_hd {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 8px;
+    .burger {
+      margin-top: 25px;
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
+      span {
+        height: 18px;
+        width: 75px;
+        border-radius: 3px;
+        &:first-child {
+          height: 15px;
+          border: 1px solid $gray;
+          border-top-left-radius: 12px;
+          border-top-right-radius: 12px;
+        }
+        &:last-child {
+          border: 1px solid $gray;
+          height: 15px;
+          border: 1px solid $gray;
+          border-bottom-left-radius: 12px;
+          border-bottom-right-radius: 12px;
+        }
+
+        &:nth-child(2) {
+          background-color: $black;
+        }
+        &:nth-child(4) {
+          background-color: $gray;
+        }
+        &:nth-child(3) {
+          height: 25px;
+          background-color: $red;
+        }
+      }
+    }
     .hd_discs {
       position: relative;
       display: flex;
@@ -56,11 +110,11 @@ body {
       align-items: center;
       span {
         display: block;
+        justify-self: start;
         border-radius: 50%;
         &:first-child {
           height: 110px;
           width: 110px;
-          background-color: $black;
         }
         &:last-child {
           height: 20px;
@@ -70,18 +124,34 @@ body {
         }
       }
     }
+    &:nth-child(3) .disc {
+      background-color: $black;
+    }
+    &:nth-child(4) .disc {
+      background-color: $red;
+    }
+    &:nth-child(5) .disc {
+      background-color: $gray;
+    }
     .hd_footer {
       width: 100%;
       display: flex;
       justify-content: space-around;
       align-items: center;
+      .hd_size {
+        font-size: 14px;
+        &::first-letter {
+          font-size: 28px;
+          font-weight: 600;
+        }
+      }
       .hd_full {
         display: flex;
         align-items: center;
         gap: 3px;
         span {
-          height: 6px;
-          width: 6px;
+          height: 7px;
+          width: 7px;
           border-radius: 50%;
           background-color: $black;
         }
@@ -92,18 +162,20 @@ body {
     grid-row: 1 / span 2;
     grid-column: 2;
     display: flex;
-    gap: 50px;
+    gap: 35px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     .info_space-item {
       h3 {
         text-transform: uppercase;
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 400;
+        letter-spacing: -0.5px;
       }
       h2 {
-        font-size: 144px;
+        font-size: 124px;
+        letter-spacing: -2px;
       }
     }
   }
@@ -111,11 +183,13 @@ body {
     grid-row: 3 / span 2;
     grid-column: 2;
     display: flex;
-    gap: 50px;
+    gap: 70px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 28px;
+    font-size: 26px;
+    text-transform: uppercase;
+    letter-spacing: -1px;
   }
 }
 
@@ -124,12 +198,13 @@ body {
   display: grid;
   grid-template-rows: 2fr 1fr 1.5fr 2.5fr 3.5fr;
   .stats_info {
-		display: flex;
-		justify-content: space-between;
-		padding: 22px;
-		font-size: 20px;
-		font-weight: 300;
-		text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    padding: 22px;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: -1px;
     &:nth-child(2) {
       background-color: $yellow;
     }
@@ -138,11 +213,11 @@ body {
     }
     &:nth-child(4) {
       background-color: $red;
-      color: white;
+      color: $gray;
     }
     &:nth-child(5) {
       background-color: $blue;
-      color: white;
+      color: $gray;
     }
   }
 }
