--- a/styles/museum.scss
+++ b/styles/museum.scss
@@ -1,4 +1,5 @@
 @import './reset.scss';
+@import './styles.scss';
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?&family=Quicksand:wght@300..700&display=swap');
 
