--- a/styles/pixies.scss
+++ b/styles/pixies.scss
@@ -1,4 +1,5 @@
 @import './reset.scss';
+@import './styles.scss';
 
 $white: #dee1d6;
 $green: #5ebc44;
@@ -30,8 +31,8 @@ body {
     .top_box {
       display: flex;
       flex-direction: column;
-      gap: 8px;
-      font-weight: 600;
+      gap: 6px;
+      font-weight: 700;
       font-size: 16px;
       h1 {
         font-size: 135px;
@@ -41,9 +42,10 @@ body {
         padding-left: 8px;
       }
       &:last-child {
-        color: white;
+        color: #DDDDD1;
+        padding-top: 40px;
         font-size: 22px;
-        font-weight: 500;
+        font-weight: 600;
         align-self: center;
       }
     }
